<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MonitorActivity"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:gravity="center"
            android:layout_marginBottom="30dp" >

            <TextView
                android:textAlignment="textEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f1" />

            <TextView
                android:layout_marginStart="30dp"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:id="@+id/f1"/>

        </TableRow>

        <TableRow
            android:gravity="center"
            android:layout_marginBottom="30dp" >

            <TextView
                android:textAlignment="textEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f2" />

            <TextView
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:id="@+id/f2" />

        </TableRow>

        <TableRow
            android:gravity="center"
            android:layout_marginBottom="30dp" >

            <TextView
                android:textAlignment="textEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f3"/>

            <TextView
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:id="@+id/f3" />

        </TableRow>

        <TableRow
            android:gravity="center"
            android:layout_marginBottom="30dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:text="@string/f4"/>

            <TextView
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:id="@+id/f4"/>

        </TableRow>


        <TableRow
            android:gravity="center"
            android:layout_marginBottom="30dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:text="@string/f5"/>

            <TextView
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:id="@+id/f5"/>

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fan_on"
            android:id="@+id/fanOnOff"
            android:onClick="onClick1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loadOnOff"
            android:text="@string/load_on"
            android:onClick="onClick2" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pumpOnOff"
        android:text="@string/pump_on"
        android:onClick="onClick3" />

</LinearLayout>